--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,7 +19,7 @@
                                 <input type="password" name="password" placeholder="Lozinka" class="input-field">
                             </div>
                         </div>
-                        <button type="submit" class="submit-button"> Prijavi se </button>
+                        <button class="submit-button"> Prijavi se </button>
                         <div class="pt-4 text-muted"> Nemate nalog? 
                             <a class="registration-link"> Registrujte se </a>
                         </div>
