--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@ body {
     background-image: url("/assets/wallpaper.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     color: black;
     text-align: center;
 }
