Create form for registration and add register function for adding new user in local storage

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -21,7 +21,7 @@
                         </div>
                         <button class="submit-button" (click)="logIn()"> Prijavi se </button>
                         <div class="pt-4 text-muted"> Nemate nalog? 
-                            <a class="registration-link"> Registrujte se </a>
+                            <a class="registration-link" href="/registration"> Registrujte se </a>
                         </div>
                     </form>
                 </div>
