--- a/src/app/components/registration/registration.component.css
+++ b/src/app/components/registration/registration.component.css
@@ -41,3 +41,14 @@
     font-weight: bold;
     font-size: 18px;
 }
+
+.back-link {
+    text-decoration: none;
+    cursor: pointer;
+    color: black;
+    font-weight: bold;
+}
+
+.back-link:hover {
+    font-size: 18px;
+}
