--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<main>
+<body>
     <div class="container">
         <div class="row">
             <div class="login-panel">
@@ -31,4 +31,4 @@
             </div>
         </div>
     </div>
-</main>
+</body>
