--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,4 +1,4 @@
-<main>
+<body>
     <div class="container">
         <div class="row">
             <div class="registration-panel">
@@ -27,4 +27,4 @@
             </div>
         </div>
     </div>
-</main>
+</body>
