--- a/src/app/components/show-items/show-items.component.html
+++ b/src/app/components/show-items/show-items.component.html
@@ -1,12 +1,48 @@
 <body>
     <header class="show-items-header">
         <nav class="header-nav-bar">
-            <a href="#"> LINK1 </a>
-            <a href="#"> LINK2 </a>
-            <a href="#"> LINK3 </a>
+            <a href="#"> <span class="fa fa-shopping-basket p-3"></span> </a>
+            <a href="#"> <span class="fa fa-bell p-3"> </span> </a>
+            <a href="#"> <span class="fa fa-user p-3"> </span> </a>
         </nav>
-
     </header>
+
+    <div id="show-items-carousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#show-items-carousel" data-bs-slide-to="0" class="active" aria-current="true"></button>
+            <button type="button" data-bs-target="#show-items-carousel" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#show-items-carousel" data-bs-slide-to="2"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                    <img src="../../../assets/show-items-cake.webp" class="d-block w-100" alt="Cupcake">
+                    <div class="carousel-caption d-none d-md-block">
+                        <button class="show-items-button"> SVE TORTE </button>
+                    </div>
+            </div>
+            <div class="carousel-item">
+                <img src="../../../assets/show-items-cupcakes.jpeg" class="d-block w-100" alt="Cupcake">
+                    <div class="carousel-caption d-none d-md-block">
+                        <button class="show-items-button"> SVI KOLACI </button>
+                    </div>
+            </div>
+            <div class="carousel-item">
+                <img src="../../../assets/show-items-promotion.jpg" class="d-block w-100" alt="Cupcake">
+                    <div class="carousel-caption d-none d-md-block">
+                        <button class="show-items-button"> PROMOCIJE </button>
+                    </div>
+            </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#show-items-carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#show-items-carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
     <footer class="show-items-footer">
         <div class="contact-info">
