Set 3 promotions, 6 cookies and 6 cakes to the local storage

--- a/src/app/components/show-items/show-items.component.html
+++ b/src/app/components/show-items/show-items.component.html
@@ -17,19 +17,19 @@
             <div class="carousel-item active">
                     <img src="../../../assets/show-items-cake.webp" class="d-block w-100" alt="Cupcake">
                     <div class="carousel-caption d-none d-md-block">
-                        <button class="show-items-button"> SVE TORTE </button>
+                        <button class="show-items-button" (click)="showAllCakes()"> SVE TORTE </button>
                     </div>
             </div>
             <div class="carousel-item">
                 <img src="../../../assets/show-items-cupcakes.jpeg" class="d-block w-100" alt="Cupcake">
                     <div class="carousel-caption d-none d-md-block">
-                        <button class="show-items-button"> SVI KOLACI </button>
+                        <button class="show-items-button" (click)="showAllCupcakes"> SVI KOLACI </button>
                     </div>
             </div>
             <div class="carousel-item">
                 <img src="../../../assets/show-items-promotion.jpg" class="d-block w-100" alt="Cupcake">
                     <div class="carousel-caption d-none d-md-block">
-                        <button class="show-items-button"> PROMOCIJE </button>
+                        <button class="show-items-button" (click)="showAllPromotions"> PROMOCIJE </button>
                     </div>
             </div>
         </div>
