--- a/src/app/components/show-items/show-items.component.html
+++ b/src/app/components/show-items/show-items.component.html
@@ -15,22 +15,22 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                    <img src="../../../assets/show-items-cake.webp" class="d-block w-100" alt="Cupcake">
+                    <img src="../../../assets/show-items-cake.webp" class="d-block w-100" alt="Cake">
                     <div class="carousel-caption d-none d-md-block">
                         <button class="show-items-button" (click)="showAllCakes()"> SVE TORTE </button>
                     </div>
             </div>
             <div class="carousel-item">
                 <img src="../../../assets/show-items-cupcakes.jpeg" class="d-block w-100" alt="Cupcake">
-                    <div class="carousel-caption d-none d-md-block">
-                        <button class="show-items-button" (click)="showAllCupcakes"> SVI KOLACI </button>
-                    </div>
+                <div class="carousel-caption d-none d-md-block">
+                    <button class="show-items-button" (click)="showAllCookies()"> SVI KOLACI </button>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="../../../assets/show-items-promotion.jpg" class="d-block w-100" alt="Cupcake">
-                    <div class="carousel-caption d-none d-md-block">
-                        <button class="show-items-button" (click)="showAllPromotions"> PROMOCIJE </button>
-                    </div>
+                <img src="../../../assets/show-items-promotion.jpg" class="d-block w-100" alt="Promotion">
+                <div class="carousel-caption d-none d-md-block">
+                    <button class="show-items-button" (click)="showAllPromotions()"> PROMOCIJE </button>
+                </div>
             </div>
         </div>
 
