Add show-cakes component

--- a/src/app/components/show-promotions/show-promotions.component.html
+++ b/src/app/components/show-promotions/show-promotions.component.html
@@ -4,6 +4,7 @@
             <a href="#"> <span class="fa fa-shopping-basket p-3"></span> </a>
             <a href="#"> <span class="fa fa-bell p-3"> </span> </a>
             <a href="#"> <span class="fa fa-user p-3"> </span> </a>
+            <a href="show-items"> <span class="fa fa-chevron-left p-3"> </span> </a>
         </nav>
     </header>
 
