--- a/src/app/components/show-cakes/show-cakes.component.html
+++ b/src/app/components/show-cakes/show-cakes.component.html
@@ -8,6 +8,35 @@
         </nav>
     </header>
 
+    <div class="card">
+        <table class="table">
+            <tbody>
+                <tr *ngFor="let item of showItemsOnThePage">
+                    <td> {{ item.imageUrl }}</td>
+                    <td> {{ item.name }} </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <div>
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                    <a class="page-link" (click)="previousPage()" [class.disabled]="currentPage == 1" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li class="page-item" *ngFor="let page of getAllPages()">
+                    <a class="page-link" (click)="goToPage(page)">{{ page }}</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" (click)="nextPage()" [class.disabled]="currentPage * itemsPerPage >= allItems.length" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <footer class="show-cake-footer">
         <div class="contact-info">
             <p> TELEFON: 011/223-233 </p>
