--- a/src/app/components/show-cakes/show-cakes.component.css
+++ b/src/app/components/show-cakes/show-cakes.component.css
@@ -34,15 +34,28 @@ body {
     margin: 0 auto;
 }
 
+.card {
+    width: 80%;
+    margin-top: 70px;
+    margin-left: 150px;
+}
+
 .pagination .page-link {
     color: black;
     cursor: pointer;
-    /* background-color: #F9F5F0; */
 }
 
-.card {
-    /* background-color: #F9F5F0; */
-    width: 80%;
-    margin-top: 100px;
-    margin-left: 150px;
+.item-link {
+    text-decoration: none;
+    color: #000000;
+    font-weight: bold;
+}
+
+.item-link:hover {
+    font-size: 18px;
+}
+
+.item-image {
+    width: 120px;
+    height: 80px;
 }
