--- a/src/app/components/show-cakes/show-cakes.component.html
+++ b/src/app/components/show-cakes/show-cakes.component.html
@@ -12,8 +12,8 @@
         <table class="table">
             <tbody>
                 <tr *ngFor="let item of showItemsOnThePage">
-                    <td> {{ item.imageUrl }}</td>
-                    <td> {{ item.name }} </td>
+                    <td> <img src="{{ item.imageUrl }}" class="item-image"></td>
+                    <td> <a href="#" class="item-link"> {{ item.name }} </a> </td>
                 </tr>
             </tbody>
         </table>
