--- a/src/app/components/show-cakes/show-cakes.component.html
+++ b/src/app/components/show-cakes/show-cakes.component.html
@@ -13,7 +13,7 @@
             <tbody>
                 <tr *ngFor="let item of showItemsOnThePage">
                     <td> <img src="{{ item.imageUrl }}" class="item-image"></td>
-                    <td> <a href="#" class="item-link"> {{ item.name }} </a> </td>
+                    <td> <a (click)="showDetails(item)" class="item-link"> {{ item.name }} </a> </td>
                 </tr>
             </tbody>
         </table>
