--- a/src/app/components/item-details/item-details.component.html
+++ b/src/app/components/item-details/item-details.component.html
@@ -1,10 +1,11 @@
 <body>
-    <header class="show-cake-header">
+    <header class="show-item-header">
         <nav class="header-nav-bar">
             <a href="#"> <span class="fa fa-shopping-basket p-3"></span> </a>
             <a href="#"> <span class="fa fa-bell p-3"> </span> </a>
-            <a href="#"> <span class="fa fa-user p-3"> </span> </a>
+            <a href="user-profile"> <span class="fa fa-user p-3"> </span> </a>
             <a href="show-cakes"> <span class="fa fa-chevron-left p-3"> </span> </a>
+            <a href=""> <span class="fa fa-sign-out p-3"></span> </a>
         </nav>
     </header>
 
@@ -64,7 +65,7 @@
         </form>
     </div>
 
-    <footer class="show-promotions-footer">
+    <footer class="show-item-footer">
         <div class="contact-info">
             <p> TELEFON: 011/223-233 </p>
             <p> E-MAIL: slatki_zalogaji&#64;gmail.com </p>
