--- a/src/app/components/show-cakes/show-cakes.component.html
+++ b/src/app/components/show-cakes/show-cakes.component.html
@@ -3,8 +3,9 @@
         <nav class="header-nav-bar">
             <a href="#"> <span class="fa fa-shopping-basket p-3"></span> </a>
             <a href="#"> <span class="fa fa-bell p-3"> </span> </a>
-            <a href="#"> <span class="fa fa-user p-3"> </span> </a>
+            <a href="user-profile"> <span class="fa fa-user p-3"> </span> </a>
             <a href="show-items"> <span class="fa fa-chevron-left p-3"> </span> </a>
+            <a href=""> <span class="fa fa-sign-out p-3"></span> </a>
         </nav>
     </header>
 
