--- a/src/app/components/item-details/item-details.component.css
+++ b/src/app/components/item-details/item-details.component.css
@@ -77,3 +77,12 @@ hr {
     background-color: #000000;
     border: #000000;
 }
+
+.comment-textarea {
+    border: 2px solid #CCCCCC;
+}
+
+.order-input {
+    border: 2px solid #CCCCCC;
+    text-align: center;
+}
