--- a/src/app/components/item-details/item-details.component.html
+++ b/src/app/components/item-details/item-details.component.html
@@ -1,7 +1,7 @@
 <body>
     <header class="show-item-header">
         <nav class="header-nav-bar">
-            <a href="#"> <span class="fa fa-shopping-basket p-3"></span> </a>
+            <a href="show-basket"> <span class="fa fa-shopping-basket p-3"></span> </a>
             <a href="#"> <span class="fa fa-bell p-3"> </span> </a>
             <a href="user-profile"> <span class="fa fa-user p-3"> </span> </a>
             <a href="show-cakes"> <span class="fa fa-chevron-left p-3"> </span> </a>
