--- a/src/app/components/staff-requests/staff-requests.component.html
+++ b/src/app/components/staff-requests/staff-requests.component.html
@@ -26,9 +26,9 @@
                     <td> {{ request.items }} </td>
                     <td> {{ request.totalPrice }} </td>
                     <td> 
-                        <button class="button-accept-decline" (click)="accept()"> <span class="fa fa-check"> </span> </button>
+                        <button class="button-accept-decline" (click)="accept(request)"> <span class="fa fa-check"> </span> </button>
                         &nbsp;
-                        <button class="button-accept-decline" (click)="decline()"> <span class="fa fa-times"> </span> </button>
+                        <button class="button-accept-decline" (click)="decline(request)"> <span class="fa fa-times"> </span> </button>
                     </td>
                 </tr>
             </tbody>
