--- a/src/app/components/show-promotions/show-promotions.component.html
+++ b/src/app/components/show-promotions/show-promotions.component.html
@@ -1,9 +1,9 @@
 <body>
     <header class="show-promotions-header">
         <nav class="header-nav-bar">
-            <a href="#"> <span class="fa fa-shopping-basket p-3"></span> </a>
-            <a href="#"> <span class="fa fa-bell p-3"> </span> </a>
-            <a href="#"> <span class="fa fa-user p-3"> </span> </a>
+            <a href="show-basket"> <span class="fa fa-shopping-basket p-3"></span> </a>
+            <a href="user-notification"> <span class="fa fa-bell p-3"> </span> </a>
+            <a href="user-profile"> <span class="fa fa-user p-3"> </span> </a>
             <a href="show-items"> <span class="fa fa-chevron-left p-3"> </span> </a>
             <a href=""> <span class="fa fa-sign-out p-3"></span> </a>
         </nav>
