--- a/src/app/components/show-items/show-items.component.html
+++ b/src/app/components/show-items/show-items.component.html
@@ -2,7 +2,7 @@
     <header class="show-items-header">
         <nav class="header-nav-bar">
             <a href="show-basket"> <span class="fa fa-shopping-basket p-3"></span> </a>
-            <a href="#"> <span class="fa fa-bell p-3"> </span> </a>
+            <a href="user-notification"> <span class="fa fa-bell p-3"> </span> </a>
             <a href="user-profile"> <span class="fa fa-user p-3"> </span> </a>
             <a href=""> <span class="fa fa-sign-out p-3"></span> </a>
         </nav>
