--- a/src/app/components/user-notification/user-notification.component.html
+++ b/src/app/components/user-notification/user-notification.component.html
@@ -9,8 +9,9 @@
         <table class="table">
             <thead>
                 <tr>
+                    <th scope="col"> Broj porudzbine </th>
                     <th scope="col"> Sadrzaj </th>
-                    <th scope="col"> Cena </th>
+                    <th scope="col"> Ukupna cena </th>
                     <th scope="col"> Izvrsenje </th>
                 </tr>
             </thead>
@@ -19,6 +20,7 @@
                     <td colspan="4"> NEMA OBAVESTENJA </td>
                 </tr>
                 <tr *ngFor="let notification of showNotificationsOnThePage">
+                    <td> {{ notification.id }} </td>
                     <td> {{ notification.items }} </td>
                     <td> {{ notification.totalPrice }} </td>
                     <td> {{ notification.acceptance }} </td>
