--- a/src/app/components/staff-requests/staff-requests.component.html
+++ b/src/app/components/staff-requests/staff-requests.component.html
@@ -1,7 +1,7 @@
 <body>
     <header class="requests-header">
         <nav class="header-nav-bar">
-            <a href="#"> <span class="fa fa-plus p-3"></span> </a>
+            <a href="add-new-item"> <span class="fa fa-plus p-3"></span> </a>
             <a href="user-profile"> <span class="fa fa-user p-3"> </span> </a>
             <a href=""> <span class="fa fa-sign-out p-3"></span> </a>
         </nav>
