Finish add function

--- a/src/app/components/add-new-item/add-new-item.component.css
+++ b/src/app/components/add-new-item/add-new-item.component.css
@@ -74,9 +74,9 @@ body {
 }
 
 .message-field {
-    color: red;
+    color: #000000;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .description-textarea {
